samples/_failures_safe/1761145356_02b215_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a072bfa0.c: In function ‘main’:
./samples/SAFE/__tmp_a072bfa0.c:154:5: error: expected declaration or statement at end of input
  154 |     print_word_counts(word_counts, unique_count);
      |     ^~~~~~~~~~~~~~~~~
